examples/apache2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apache2
spec:
  containers:
    - name: apache2
      image: httpd
      ports:
        - containerPort: 80
