examples/assist.yaml

apiVersion: v1
kind: Service
metadata:
  name: assist-service
  labels:
    l1: component
    l2: php-editor
    l3: assist-myadmin
spec:
  type: NodePort
  selector:
    name: assist
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30027
