examples/multi-container-pod.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service-multi-container
spec:
  selector:
    name: nginx-multi-container
  ports:
    - port: 8080
      targetPort: 80
      name: nginx-multi-container
    - port: 3000
      targetPort: 3000
      name: nodejs-web

---

apiVersion: v1
kind: Pod
metadata:
  name: curl-multi-container
  labels:
    name: curl-multi-container
spec:
  containers:
    - name: curl-multi-container
      image: khannedy/nginx-curl
