examples/service-nginx-loadbalancer.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service-lb
spec:
  type: LoadBalancer
  selector:
    name: nginx-lb
  ports:
    - port: 80
      targetPort: 80
