examples/sharing-volume.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service-sharing-volume
spec:
  type: NodePort
  selector:
    name: nginx-sharing-volume
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30002
