examples/service-nginx-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service-ing
spec:
  selector:
    name: nginx-ing
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules:
    - host: assist.k8s.local
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service-ing
              servicePort: 80
